Sidebar overlap fixed and Table style changes
- Sidebar no longer overlaps content
- Extra styles were added to Table

--- a/react-app/src/css/additional-styles/SideMenu.css
+++ b/react-app/src/css/additional-styles/SideMenu.css
@@ -55,3 +55,7 @@
 .menu a:hover {
   background-color: #666;
 }
+
+.sidebar-m{
+  margin: 0 max(33%, 20px) 0 0;
+}
